@@ -10,6 +10,8 @@ New features
 
 - 32nd notes and rests are now supported.
 
+- Articulations: accent and staccato.
+
 Bugs fixed
 ----------
 
